...
    <View style={styles.container}>
      <ScrollView>
        <Text style={styles.displayText}>{displayText}</Text>
      </ScrollView>
      <ScrollView>
        <ExampleButton
          title="getUser"
          onPress={() => {
            Radar.getUserId()
              .then((result) => {
                handlePopulateText("getUserId:" + result);
              })
              .catch((err) => {
...
              .catch((err) => {
                handlePopulateText("getLocation:" + err);
              });
          }}
        />
        <ExampleButton
          title="trackOnce"
          onPress={() => {
            Radar.trackOnce()
              .then((result) => {
                handlePopulateText("trackOnce:" + stringify(result));
              })
              .catch((err) => {
...
