...
                return "UNKNOWN";
        }
    }

    private String convertStatusToString(Radar.RadarStatus status) {
        switch (status) {
            case SUCCESS:
                return "SUCCESS";
            case ERROR_PUBLISHABLE_KEY:
                return "ERROR_PUBLISHABLE_KEY";
            case ERROR_PERMISSIONS:
                return "ERROR_PERMISSIONS";
            case ERROR_LOCATION:
...
